--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "nodemon": "^1.18.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
+    "helmet": "^3.13.0",
     "knex": "^0.15.0",
+    "morgan": "^1.9.0",
     "sqlite3": "^4.0.1"
   }
 }
